--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-app="receta">
 	<div class="panel panel-success">
 		<div class="panel-heading">
-			<h1>title</h1>
+			<h1 ng-if="name">Hello, {{name}}</h1>
 		</div>
 		<div class="panel-body">
 			<form class="form-inline">
